Fix T39562: Properties panel Pinning is broken

'scene' was simply not handled in button context.